# go-gin-gazelle

./: BUILD.bazel  README copy.md  README.md  bazel-bin  bazel-go-gin-gazelle  bazel-out  bazel-testlogs  deps.bzl  go.mod
app/: BUILD.bazel  main.go
